<resources>
    <string name="app_name">StudentManager</string>
    <string name="timkiem">Tìm kiếm</string>
    <string name="quanlysinhvien">ManagerStudent</string>
    <string name="noInternet">Không có kết nối Internet</string>
    <string name="abc">Profile Student</string>
    <string name="nghi_m_v_n_minh">Nghiêm Văn Minh</string>
    <string name="_0339142262">0339142262</string>
    <string name="adress">Hà Nội</string>
    <string name="age">Age: </string>
    <string name="ages_student">23</string>
    <string name="edit">Edit</string>
    <string name="add">Add Student</string>
    <string name="enter_name_student">Enter name student</string>
    <string name="enter_age_student">Enter age student</string>
    <string name="enter_phone_student">Enter phone student</string>
    <string name="enter_adress_student">Enter address student</string>
    <string name="save">Add</string>
    <string name="cancel">Cancel</string>
    <string name="update_student">Update Student</string>
    <string name="update">Edit</string>

    <string name="add_success">Add success</string>
    <string name="edit_success">Edit success</string>
    <string name="delete_success">Delete success</string>
    <string name="age_student">Age: </string>
</resources>
