<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.addstudent.AddStudentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="top"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/myTheme.ActionBar.Text"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/size_text_normal" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_icon_large"
        android:layout_marginStart="@dimen/margin_left_min"
        android:layout_marginTop="@dimen/margin_left_min"
        android:layout_marginEnd="@dimen/margin_left_min"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_useradd"
        android:drawableLeft="@drawable/ic_useradd"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/enter_name_student"
        android:inputType="text"
        android:paddingStart="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_small"
        android:textSize="@dimen/size_text_normal"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_icon_large"
        android:layout_marginStart="@dimen/margin_left_min"
        android:layout_marginTop="@dimen/margin_left_min"
        android:layout_marginEnd="@dimen/margin_left_min"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_birthday"
        android:drawableLeft="@drawable/ic_birthday"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/enter_age_student"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_small"
        android:textSize="@dimen/size_text_normal"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_icon_large"
        android:layout_marginStart="@dimen/margin_left_min"
        android:layout_marginTop="@dimen/margin_left_min"
        android:layout_marginEnd="@dimen/margin_left_min"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_smartphone"
        android:drawableLeft="@drawable/ic_smartphone"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/enter_phone_student"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_small"
        android:textSize="@dimen/size_text_normal"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/edtAge"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_icon_large"
        android:layout_marginStart="@dimen/margin_left_min"
        android:layout_marginTop="@dimen/margin_left_min"
        android:layout_marginEnd="@dimen/margin_left_min"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_address"
        android:drawableLeft="@drawable/ic_address"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/enter_adress_student"
        android:inputType="text"
        android:paddingStart="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_small"
        android:textSize="@dimen/size_text_normal"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/edtPhone"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginBottom="@dimen/margin_bottom_x_small">

        <Button
            android:id="@+id/btAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:inputType="textCapWords"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,TextViewEdits" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:inputType="textCapWords"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,TextViewEdits" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>