<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.updatestudent.UpdateStudentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:gravity="top"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/myTheme.ActionBar.Text"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/update_student"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/size_text_normal" />
        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="@dimen/size_icon_x_large"
            android:layout_height="@dimen/size_icon_x_large"
            android:layout_gravity="right"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/edit"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/size_text_normal"
            tools:ignore="RtlHardcoded" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edtUpdateName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_icon_large"
        android:layout_marginStart="@dimen/margin_left_min"
        android:layout_marginTop="@dimen/margin_left_min"
        android:layout_marginEnd="@dimen/margin_left_min"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_useradd"
        android:drawableLeft="@drawable/ic_useradd"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/enter_name_student"
        android:inputType="text"
        android:paddingStart="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_small"
        android:textSize="@dimen/size_text_normal"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/edtUpdateAge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_icon_large"
        android:layout_marginStart="@dimen/margin_left_min"
        android:layout_marginTop="@dimen/margin_left_min"
        android:layout_marginEnd="@dimen/margin_left_min"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_birthday"
        android:drawableLeft="@drawable/ic_birthday"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/enter_age_student"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_small"
        android:textSize="@dimen/size_text_normal"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdateName"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/edtUpdatePhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_icon_large"
        android:layout_marginStart="@dimen/margin_left_min"
        android:layout_marginTop="@dimen/margin_left_min"
        android:layout_marginEnd="@dimen/margin_left_min"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_smartphone"
        android:drawableLeft="@drawable/ic_smartphone"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/enter_phone_student"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_small"
        android:textSize="@dimen/size_text_normal"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdateAge"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/edtUpdateAddress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_icon_large"
        android:layout_marginStart="@dimen/margin_left_min"
        android:layout_marginTop="@dimen/margin_left_min"
        android:layout_marginEnd="@dimen/margin_left_min"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_address"
        android:drawableLeft="@drawable/ic_address"
        android:drawablePadding="@dimen/padding_small"
        android:hint="@string/enter_adress_student"
        android:inputType="text"
        android:paddingStart="@dimen/padding_small"
        android:paddingLeft="@dimen/padding_small"
        android:textSize="@dimen/size_text_normal"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdatePhone"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,TextFields" />

<!--    <Button-->
<!--        android:id="@+id/btEdit"-->
<!--        android:layout_width="128dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:background="@drawable/custom_button"-->
<!--        android:inputType="textCapCharacters"-->
<!--        android:text="@string/update"-->
<!--        android:textColor="#FFFFFF"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/edtUpdateAddress"-->
<!--        tools:ignore="TextViewEdits" />-->

    <ProgressBar
        android:id="@+id/progressOnLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_progressbar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />
</androidx.constraintlayout.widget.ConstraintLayout>